# SFEM

./: CMakeLists.txt  LICENSE  README  README.md
config/: defaults.cmake
docs/: Doxyfile  include.tex.in
docs/refman/: doxygen.cfg.in  footer.html.in  mainpage  makefile
include/: SFEM.h  timer.h  workBench.h
include/electromagnetics/: temp.h
include/iga/: temp.h
include/sfemMath/sfemBlas/: blas0.h  blas1_d.h
include/sfemlib/: dof.h  domain.h  error.h  field.h  logger.h  numericalMethod.h  problemmode.h  sparseMatrix.h  timer.h
include/transport/: temp.h
src/: SFEM.cpp  sfemcfg.h.in  timer.cpp
src/electromagnetics/: CMakeLists.txt  temp.cpp
src/fluid/: CMakeLists.txt
src/iga/: CMakeLists.txt
src/main/: SFEM.cpp  blas_test.cpp
src/sfemMath/: temp.cpp
src/sfemMath/sfemBlas/: CMakeLists.txt  blas0.cpp  blas1_d.cpp
src/sfemlib/: CMakeLists.txt  dof.cpp  field.cpp  timer.cpp  util.h  workBench.cpp
src/structural/: CMakeLists.txt
src/transport/: CMakeLists.txt
